--- a/forum/DFor/static/css/profil.css
+++ b/forum/DFor/static/css/profil.css
@@ -1,6 +1,6 @@
 /* Formularz postow naglowek */
 
-.formularz_post {
+.profil {
     padding: 20px 0 0 0;
     margin-left: auto;
     margin-right: auto;
@@ -9,12 +9,11 @@
 }
 
 .formularz {
-    width: 616px;
+    width: 390px;
 }
 
-
 .formularz .opis {
-    width: 30px;
+    width: 100px;
 }
 
 .naglowek2 .szerokosc {
@@ -24,7 +23,6 @@
 .naglowek2 .guzik .szerokosc {
     width: 96px;
 }
-
 
 /* Zawartosc formularzy */
 
