--- a/forum/DFor/static/css/zaloguj.css
+++ b/forum/DFor/static/css/zaloguj.css
@@ -8,20 +8,11 @@
 
 .formularz {
     margin-top: 10px;
-    margin-left: auto;
-    margin-right: auto;
     width: 306px;
 }
 
-.tabelka {
-    float: left;
-    margin-bottom: 5px;
-}
-
-.opis {
+.formularz .opis {
     width: 120px;
-    margin-top: 3px;
-    text-align: left;
 }
 
 .naglowek2 .szerokosc {
