--- a/forum/DFor/static/css/rejestruj.css
+++ b/forum/DFor/static/css/rejestruj.css
@@ -4,12 +4,12 @@
     padding: 20px 0 0 0;
     margin-left: auto;
     margin-right: auto;
-    width: 900px;
+    width: 410px;
     text-align: center;
 }
 
 .formularz {
-    width: 390px;
+    width: 350px;
 }
 
 .formularz .opis {
@@ -17,7 +17,7 @@
 }
 
 .naglowek2 .szerokosc {
-    width: 896px;
+    width: 406px;
 }
 
 .naglowek2 .guzik .szerokosc {
@@ -27,5 +27,11 @@
 /* Zawartosc formularzy */
 
 .zawartosc {
-    padding: 10px 0 0 10px;
+    padding: 10px 0 0 0;
+}
+
+.zawartosc textarea {
+    width: 240px; 
+    height: 45px;
+    resize: none;
 }
