Prawie działa juz wyszukiwanie

--- a/forum/DFor/templates/posty.html
+++ b/forum/DFor/templates/posty.html
@@ -1,7 +1,7 @@
 {% extends "baza.html" %}
 
 {% block title %}
-    Posty użytkownika: {{ posty.all.0.autor }}
+    Posty użytkownika:  posty.all.0.autor 
 {% endblock %}
 
 {% block style %}
@@ -16,7 +16,7 @@
 		<div class="belka lewy"></div>
 		<div class="belka srodek">
 		    <h1 class="tekst">
-			Posty użytkownika: {{ posty.all.0.autor }}
+ 			Posty użytkownika:  posty.all.0.autor 
 		    </h1>
 		</div>
 		<div class="belka prawy"></div>
