--- a/forum/DFor/templates/baza.html
+++ b/forum/DFor/templates/baza.html
@@ -5,7 +5,6 @@
     <meta charset="utf-8" />
     <title>Forum - DFor: {% block title %} {% endblock %}</title>
     <link rel="stylesheet" type="text/css" href="/static/css/style.css" />
-    {% block style %} {% endblock %}
     {% block head %} {% endblock %}
 </head>
 
@@ -36,7 +35,7 @@
 
 <!-- Początek logo -->
 <div id="logo">
-    <h1><a href="">Forum - DFor</a></h1>
+    <h1><a href="/dfor">Forum - DFor</a></h1>
     <h2>dla każdego</h2>
 </div>
 <!-- Koniec logo -->
